--- a/style.css
+++ b/style.css
@@ -14,3 +14,66 @@ tlačítko Facebook:				 #3b5998
 tlačítko Facebook aktivní: #2b406e
 */
 
+body
+{
+    font-family: 'Nunito', sans-serif;
+    background-color: #b2bec3;
+    text-align: justify;
+ }
+
+.obdelnik
+{
+    padding: 30px;
+    margin: 150px auto;
+    width: 550px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px grey;
+    background-color: white;
+    position: relative;
+}
+
+img
+{
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    border: 3px solid white;
+    position: absolute;
+    right: -75px;
+    top: -75px;
+}
+
+h1
+{
+    font-size: 36px;
+    font-weight: bold;
+    color: #d63031;
+    margin-top: 0;
+}
+
+p
+{
+    font-size: 18px;
+    margin-bottom: 30px;
+}
+
+.twitter , .facebook
+{
+    display: block;
+    width: 100%;
+    background-color: #1da1f2;
+    color: white;
+    font-size: 18px;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 5px;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-weight: bold;
+    text-align: center;
+}
+
+.facebook
+{
+    background-color:#2b406e;
+}
