--- a/style.css
+++ b/style.css
@@ -73,7 +73,16 @@ p
     text-align: center;
 }
 
+.twitter:hover
+{
+    background-color: #0b7bc1;
+}
 .facebook
 {
-    background-color:#2b406e;
+    background-color:#3b5998;
+}
+
+.facebook:hover
+{
+    background-color:#2b406e ;
 }
